--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,48 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
-    "template = PromptTemplate.from_template(\"how far is the {city_a} from the {city_b}? And what is your name?\")\n",
-    "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4o-mini\")\n",
-    "\n",
-    "prompt = template.format(city_a=\"Seoul\", city_b=\"Beijing\")\n",
-    "# chat.predict(prompt)\n"
+    "chat = ChatOpenAI(model_name=\"gpt-4o-mini\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.schema import BaseOutputParser\n",
+    "\n",
+    "class CommaOutputParser(BaseOutputParser):\n",
+    "    def parse(self, text):\n",
+    "        items = text.strip().split(\",\")\n",
+    "        return list(map(str.strip, items))\n",
+    "\n",
+    "template = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a list generating machine. Everthing you are asked You need to answer with a comma separated list of max {max_items} in list. Do NOT reply with anything else.\"),\n",
+    "    (\"human\", \"{question}\")\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='ソウルから北京までの距離は約950キロメートルです。私の名前は特にありませんが、あなたの質問にお答えするためにここにいます。')"
+       "['Pikachu', 'Charizard', 'Bulbasaur', 'Squirtle', 'Jigglypuff']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "template = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a helpful assistant that answers questions about the distance between cities. you only reply with {language}.\"),\n",
-    "    (\"ai\", \"안녕하세요? 제 이름은 {ai_name}이에요. 무엇을 도와드릴까요?\"),\n",
-    "    (\"human\", \"how far is the {city_a} from the {city_b}? And what is your name?\"),\n",
-    "])\n",
-    "\n",
-    "prompt = template.format_messages(language=\"Japanese\", ai_name=\"Nakamura\", city_a=\"Seoul\", city_b=\"Beijing\")\n",
-    "\n",
-    "chat.predict_messages(prompt)"
+    "chain = template | chat | CommaOutputParser()\n",
+    "chain.invoke({\n",
+    "    \"max_items\": 5,\n",
+    "    \"question\": \"What are the pokemons?\",\n",
+    "})"
    ]
   }
  ],
