--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,56 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4o-mini\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.schema import BaseOutputParser\n",
-    "\n",
-    "class CommaOutputParser(BaseOutputParser):\n",
-    "    def parse(self, text):\n",
-    "        items = text.strip().split(\",\")\n",
-    "        return list(map(str.strip, items))\n",
-    "\n",
-    "template = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a list generating machine. Everthing you are asked You need to answer with a comma separated list of max {max_items} in list. Do NOT reply with anything else.\"),\n",
-    "    (\"human\", \"{question}\")\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Pikachu', 'Charizard', 'Bulbasaur', 'Squirtle', 'Jigglypuff']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcallbacks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StreamingStdOutCallbackHandler\n\u001b[1;32m      5\u001b[0m chat \u001b[38;5;241m=\u001b[39m ChatOpenAI(model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o-mini\u001b[39m\u001b[38;5;124m\"\u001b[39m, temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m, streaming\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, callbacks\u001b[38;5;241m=\u001b[39m[StreamingStdOutCallbackHandler()],)\n\u001b[0;32m----> 7\u001b[0m tail_prompt \u001b[38;5;241m=\u001b[39m \u001b[43mChatPromptTemplate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_messages\u001b[49m\u001b[43m[\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msystem\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mYou are a fairy tail expert. You tell about the fairy tail\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ms story that human ask.\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhuman\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{fairy_tail}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m]\u001b[49m\n\u001b[1;32m     12\u001b[0m tail_chain \u001b[38;5;241m=\u001b[39m tail_prompt \u001b[38;5;241m|\u001b[39m chat\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     ]
     }
    ],
    "source": [
-    "chain = template | chat | CommaOutputParser()\n",
-    "chain.invoke({\n",
-    "    \"max_items\": 5,\n",
-    "    \"question\": \"What are the pokemons?\",\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "\n",
+    "chat = ChatOpenAI(model_name=\"gpt-4o-mini\", temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()],)\n",
+    "\n",
+    "tail_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a fairy tail expert. You tell about the fairy tail's story that human ask.\"),\n",
+    "    (\"human\", \"{fairy_tail}\")\n",
+    "])\n",
+    "\n",
+    "tail_chain = tail_prompt | chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "odd_story_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a very good story teller. You get a story, and You answer about it but twist the plot little oddly.\"),\n",
+    "    (\"human\", \"{story}\")\n",
+    "])\n",
+    "\n",
+    "odd_chain = odd_story_prompt | chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_chain = {\"story\": tail_chain} | odd_chain\n",
+    "all_chain.invoke({\n",
+    "    \"fairy_tail\": \"Peter Pan\"\n",
     "})"
    ]
   }
