--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,60 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcallbacks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StreamingStdOutCallbackHandler\n\u001b[1;32m      5\u001b[0m chat \u001b[38;5;241m=\u001b[39m ChatOpenAI(model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o-mini\u001b[39m\u001b[38;5;124m\"\u001b[39m, temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m, streaming\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, callbacks\u001b[38;5;241m=\u001b[39m[StreamingStdOutCallbackHandler()],)\n\u001b[0;32m----> 7\u001b[0m tail_prompt \u001b[38;5;241m=\u001b[39m \u001b[43mChatPromptTemplate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_messages\u001b[49m\u001b[43m[\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msystem\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mYou are a fairy tail expert. You tell about the fairy tail\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ms story that human ask.\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhuman\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{fairy_tail}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m]\u001b[49m\n\u001b[1;32m     12\u001b[0m tail_chain \u001b[38;5;241m=\u001b[39m tail_prompt \u001b[38;5;241m|\u001b[39m chat\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "'Human: What do you know about France?\\nAI: \\nHere is what I know:\\nCapital: Paris\\nLanguage: French\\nFood: Wine and Cheese\\nCurrency: Euro\\n\\n\\nHuman: What do you know about Italy?\\nAI: \\nHere is what I know:\\nCapital: Rome\\nLanguage: Italian\\nFood: Pizza and Pasta\\nCurrency: Euro\\n\\n\\nHuman: What do you know about Greece?\\nAI: \\nHere is what I know:\\nCapital: Athens\\nLanguage: Greek\\nFood: Souvlaki and Feta Cheese\\nCurrency: Euro\\n\\n\\nHuman: What do you know about Germany?'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate, PromptTemplate, FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(model_name=\"gpt-4o-mini\", temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()],)\n",
     "\n",
-    "tail_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a fairy tail expert. You tell about the fairy tail's story that human ask.\"),\n",
-    "    (\"human\", \"{fairy_tail}\")\n",
-    "])\n",
+    "examples = [\n",
+    "{\n",
+    "\"question\": \"What do you know about France?\",\n",
+    "\"answer\": \"\"\"\n",
+    "Here is what I know:\n",
+    "Capital: Paris\n",
+    "Language: French\n",
+    "Food: Wine and Cheese\n",
+    "Currency: Euro\n",
+    "\"\"\",\n",
+    "},\n",
+    "{\n",
+    "\"question\": \"What do you know about Italy?\",\n",
+    "\"answer\": \"\"\"\n",
+    "Here is what I know:\n",
+    "Capital: Rome\n",
+    "Language: Italian\n",
+    "Food: Pizza and Pasta\n",
+    "Currency: Euro\n",
+    "\"\"\",\n",
+    "},\n",
+    "{\n",
+    "\"question\": \"What do you know about Greece?\",\n",
+    "\"answer\": \"\"\"\n",
+    "Here is what I know:\n",
+    "Capital: Athens\n",
+    "Language: Greek\n",
+    "Food: Souvlaki and Feta Cheese\n",
+    "Currency: Euro\n",
+    "\"\"\",\n",
+    "},\n",
+    "]\n",
     "\n",
-    "tail_chain = tail_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "odd_story_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a very good story teller. You get a story, and You answer about it but twist the plot little oddly.\"),\n",
-    "    (\"human\", \"{story}\")\n",
-    "])\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
     "\n",
-    "odd_chain = odd_story_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_chain = {\"story\": tail_chain} | odd_chain\n",
-    "all_chain.invoke({\n",
-    "    \"fairy_tail\": \"Peter Pan\"\n",
-    "})"
+    "prompt = FewShotPromptTemplate(\n",
+    "    example_prompt=example_prompt,\n",
+    "    examples=examples,\n",
+    "    suffix=\"Human: What do you know about {country}?\",\n",
+    "    input_variables=[\"country\"],\n",
+    ")\n",
+    "\n",
+    "# prompt.format(country=\"Germany\")\n",
+    "\n",
+    "chain = prompt | chat\n",
+    "\n",
+    "chain.invoke({\"country\": \"Japan\"})"
    ]
   }
  ],
