--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,32 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "I know this:\n",
+      "Capital: Seoul\n",
+      "Language: Korean\n",
+      "Food: Kimchi and Bibimbap\n",
+      "Currency: South Korean Won (KRW)"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Human: What do you know about France?\\nAI: \\nHere is what I know:\\nCapital: Paris\\nLanguage: French\\nFood: Wine and Cheese\\nCurrency: Euro\\n\\n\\nHuman: What do you know about Italy?\\nAI: \\nHere is what I know:\\nCapital: Rome\\nLanguage: Italian\\nFood: Pizza and Pasta\\nCurrency: Euro\\n\\n\\nHuman: What do you know about Greece?\\nAI: \\nHere is what I know:\\nCapital: Athens\\nLanguage: Greek\\nFood: Souvlaki and Feta Cheese\\nCurrency: Euro\\n\\n\\nHuman: What do you know about Germany?'"
+       "AIMessageChunk(content='\\nI know this:\\nCapital: Seoul\\nLanguage: Korean\\nFood: Kimchi and Bibimbap\\nCurrency: South Korean Won (KRW)')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate, PromptTemplate, FewShotPromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(model_name=\"gpt-4o-mini\", temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()],)\n",
     "\n",
     "examples = [\n",
     "{\n",
-    "\"question\": \"What do you know about France?\",\n",
+    "\"country\": \"France\",\n",
     "\"answer\": \"\"\"\n",
-    "Here is what I know:\n",
+    "I know this:\n",
     "Capital: Paris\n",
     "Language: French\n",
     "Food: Wine and Cheese\n",
@@ -35,9 +48,9 @@
     "\"\"\",\n",
     "},\n",
     "{\n",
-    "\"question\": \"What do you know about Italy?\",\n",
+    "\"country\": \"Italy\",\n",
     "\"answer\": \"\"\"\n",
-    "Here is what I know:\n",
+    "I know this:\n",
     "Capital: Rome\n",
     "Language: Italian\n",
     "Food: Pizza and Pasta\n",
@@ -45,9 +58,9 @@
     "\"\"\",\n",
     "},\n",
     "{\n",
-    "\"question\": \"What do you know about Greece?\",\n",
+    "\"country\": \"Greece\",\n",
     "\"answer\": \"\"\"\n",
-    "Here is what I know:\n",
+    "I know this:\n",
     "Capital: Athens\n",
     "Language: Greek\n",
     "Food: Souvlaki and Feta Cheese\n",
@@ -56,20 +69,28 @@
     "},\n",
     "]\n",
     "\n",
-    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
+    "# this to format examples\n",
+    "example_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"human\", \"What do you know about {country}?\"),\n",
+    "    (\"ai\", \"{answer}\"),\n",
+    "])\n",
     "\n",
-    "prompt = FewShotPromptTemplate(\n",
+    "example_prompt = FewShotChatMessagePromptTemplate(\n",
     "    example_prompt=example_prompt,\n",
     "    examples=examples,\n",
-    "    suffix=\"Human: What do you know about {country}?\",\n",
-    "    input_variables=[\"country\"],\n",
     ")\n",
+    "\n",
+    "final_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a geography expert. you give short answers\"),\n",
+    "    example_prompt,\n",
+    "    (\"human\", \"What do you know about {country}?\"),\n",
+    "])\n",
     "\n",
     "# prompt.format(country=\"Germany\")\n",
     "\n",
-    "chain = prompt | chat\n",
+    "chain = final_prompt | chat\n",
     "\n",
-    "chain.invoke({\"country\": \"Japan\"})"
+    "chain.invoke({\"country\": \"South Korea\"})"
    ]
   }
  ],
