--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,95 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "I know this:\n",
-      "Capital: Seoul\n",
-      "Language: Korean\n",
-      "Food: Kimchi and Bibimbap\n",
-      "Currency: South Korean Won (KRW)"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content='\\nI know this:\\nCapital: Seoul\\nLanguage: Korean\\nFood: Kimchi and Bibimbap\\nCurrency: South Korean Won (KRW)')"
+       "'Human: What do you know about Greece?\\nAI: \\n        I know this:\\n        Capital: Athens\\n        Language: Greek\\n        Food: Souvlaki and Feta Cheese\\n        Currency: Euro\\n        \\n\\nHuman: What do you know about Brazil?'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
+    "from langchain.prompts import example_selector\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "from langchain.prompts.prompt import PromptTemplate\n",
+    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
     "\n",
     "chat = ChatOpenAI(model_name=\"gpt-4o-mini\", temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()],)\n",
     "\n",
     "examples = [\n",
-    "{\n",
-    "\"country\": \"France\",\n",
-    "\"answer\": \"\"\"\n",
-    "I know this:\n",
-    "Capital: Paris\n",
-    "Language: French\n",
-    "Food: Wine and Cheese\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
-    "},\n",
-    "{\n",
-    "\"country\": \"Italy\",\n",
-    "\"answer\": \"\"\"\n",
-    "I know this:\n",
-    "Capital: Rome\n",
-    "Language: Italian\n",
-    "Food: Pizza and Pasta\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
-    "},\n",
-    "{\n",
-    "\"country\": \"Greece\",\n",
-    "\"answer\": \"\"\"\n",
-    "I know this:\n",
-    "Capital: Athens\n",
-    "Language: Greek\n",
-    "Food: Souvlaki and Feta Cheese\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
-    "},\n",
+    "    {\n",
+    "        \"question\": \"What do you know about France?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        Here is what I know:\n",
+    "        Capital: Paris\n",
+    "        Language: French\n",
+    "        Food: Wine and Cheese\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"What do you know about Italy?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        I know this:\n",
+    "        Capital: Rome\n",
+    "        Language: Italian\n",
+    "        Food: Pizza and Pasta\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"What do you know about Greece?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        I know this:\n",
+    "        Capital: Athens\n",
+    "        Language: Greek\n",
+    "        Food: Souvlaki and Feta Cheese\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
+    "    },\n",
     "]\n",
     "\n",
-    "# this to format examples\n",
-    "example_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"human\", \"What do you know about {country}?\"),\n",
-    "    (\"ai\", \"{answer}\"),\n",
-    "])\n",
+    "class RandomExampleSelector(BaseExampleSelector):\n",
+    "    def __init__(self, examples):\n",
+    "        self.examples = examples\n",
     "\n",
-    "example_prompt = FewShotChatMessagePromptTemplate(\n",
+    "    def add_example(self, example):\n",
+    "        self.examples.append(example)\n",
+    "\n",
+    "    def select_examples(self, input_variables):\n",
+    "        from random import choice\n",
+    "        return [choice(self.examples)]\n",
+    "\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
+    "example_selector = RandomExampleSelector(examples = examples)\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "    # examples = examples -> to below\n",
+    "    example_selector=example_selector,\n",
+    "    \n",
     "    example_prompt=example_prompt,\n",
-    "    examples=examples,\n",
+    "    suffix=\"Human: What do you know about {country}?\",\n",
+    "    input_variables=[\"country\"],\n",
     ")\n",
     "\n",
-    "final_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a geography expert. you give short answers\"),\n",
-    "    example_prompt,\n",
-    "    (\"human\", \"What do you know about {country}?\"),\n",
-    "])\n",
-    "\n",
-    "# prompt.format(country=\"Germany\")\n",
-    "\n",
-    "chain = final_prompt | chat\n",
-    "\n",
-    "chain.invoke({\"country\": \"South Korea\"})"
+    "prompt.format(country=\"Brazil\")"
    ]
   }
  ],
