--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,86 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrr matey! Me favorite grub be a hearty plate o' salted beef and hardtack! Aye, nothing beats the taste o' the sea! Arrr!"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Human: What do you know about Greece?\\nAI: \\n        I know this:\\n        Capital: Athens\\n        Language: Greek\\n        Food: Souvlaki and Feta Cheese\\n        Currency: Euro\\n        \\n\\nHuman: What do you know about Brazil?'"
+       "AIMessageChunk(content=\"Arrr matey! Me favorite grub be a hearty plate o' salted beef and hardtack! Aye, nothing beats the taste o' the sea! Arrr!\")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import example_selector\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts.prompt import PromptTemplate\n",
-    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
     "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4o-mini\", temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()],)\n",
-    "\n",
-    "examples = [\n",
-    "    {\n",
-    "        \"question\": \"What do you know about France?\",\n",
-    "        \"answer\": \"\"\"\n",
-    "        Here is what I know:\n",
-    "        Capital: Paris\n",
-    "        Language: French\n",
-    "        Food: Wine and Cheese\n",
-    "        Currency: Euro\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"What do you know about Italy?\",\n",
-    "        \"answer\": \"\"\"\n",
-    "        I know this:\n",
-    "        Capital: Rome\n",
-    "        Language: Italian\n",
-    "        Food: Pizza and Pasta\n",
-    "        Currency: Euro\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"question\": \"What do you know about Greece?\",\n",
-    "        \"answer\": \"\"\"\n",
-    "        I know this:\n",
-    "        Capital: Athens\n",
-    "        Language: Greek\n",
-    "        Food: Souvlaki and Feta Cheese\n",
-    "        Currency: Euro\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "]\n",
-    "\n",
-    "class RandomExampleSelector(BaseExampleSelector):\n",
-    "    def __init__(self, examples):\n",
-    "        self.examples = examples\n",
-    "\n",
-    "    def add_example(self, example):\n",
-    "        self.examples.append(example)\n",
-    "\n",
-    "    def select_examples(self, input_variables):\n",
-    "        from random import choice\n",
-    "        return [choice(self.examples)]\n",
-    "\n",
-    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
-    "example_selector = RandomExampleSelector(examples = examples)\n",
-    "prompt = FewShotPromptTemplate(\n",
-    "    # examples = examples -> to below\n",
-    "    example_selector=example_selector,\n",
-    "    \n",
-    "    example_prompt=example_prompt,\n",
-    "    suffix=\"Human: What do you know about {country}?\",\n",
-    "    input_variables=[\"country\"],\n",
+    "chat = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    "    streaming=True,\n",
+    "    callbacks=[\n",
+    "        StreamingStdOutCallbackHandler(),\n",
+    "    ],\n",
     ")\n",
     "\n",
-    "prompt.format(country=\"Brazil\")"
+    "intro = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "    You are a role playing assistant.\n",
+    "    And you are impersonating a {character}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "example = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "    This is an example of how you talk:\n",
+    "\n",
+    "    Human: {example_question}\n",
+    "    You: {example_answer}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "start = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "    Start now!\n",
+    "\n",
+    "    Human: {question}\n",
+    "    You:\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "final = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "    {intro}\n",
+    "                                     \n",
+    "    {example}\n",
+    "                              \n",
+    "    {start}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "prompts = [\n",
+    "    (\"intro\", intro),\n",
+    "    (\"example\", example),\n",
+    "    (\"start\", start),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "full_prompt = PipelinePromptTemplate(\n",
+    "    final_prompt=final,\n",
+    "    pipeline_prompts=prompts,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chain = full_prompt | chat\n",
+    "\n",
+    "chain.invoke(\n",
+    "    {\n",
+    "        \"character\": \"Pirate\",\n",
+    "        \"example_question\": \"What is your location?\",\n",
+    "        \"example_answer\": \"Arrrrg! That is a secret!! Arg arg!!\",\n",
+    "        \"question\": \"What is your fav food?\",\n",
+    "    }\n",
+    ")"
    ]
   }
  ],
