--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,31 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tokens Used: 882\n",
-      "\tPrompt Tokens: 15\n",
-      "\tCompletion Tokens: 867\n",
-      "Successful Requests: 1\n",
-      "Total Cost (USD): $0.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='Kimchi'), AIMessage(content='FA')]}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.callbacks import get_openai_callback\n",
+    "from langchain.memory import ConversationBufferMemory\n",
     "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4o-mini\")\n",
-    "\n",
-    "\n",
-    "with get_openai_callback() as usage:\n",
-    "    chat.predict(\"How do you make italian pizza and pasta\")\n",
-    "    print(usage)"
+    "memory = ConversationBufferMemory(return_messages=True)\n",
+    "memory.save_context({\"input\":\"Kimchi\"}, {\"output\": \"FA\"})\n",
+    "memory.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='Kimchi'),\n",
+       "  AIMessage(content='FA'),\n",
+       "  HumanMessage(content='Kimchi'),\n",
+       "  AIMessage(content='FA')]}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory.save_context({\"input\":\"Kimchi\"}, {\"output\": \"FA\"})\n",
+    "memory.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='Kimchi'),\n",
+       "  AIMessage(content='FA'),\n",
+       "  HumanMessage(content='Kimchi'),\n",
+       "  AIMessage(content='FA'),\n",
+       "  HumanMessage(content='Kimchi'),\n",
+       "  AIMessage(content='FA')]}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory.save_context({\"input\":\"Kimchi\"}, {\"output\": \"FA\"})\n",
+    "memory.load_memory_variables({})"
    ]
   }
  ],
