--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,80 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [HumanMessage(content='Kimchi'), AIMessage(content='FA')]}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.memory import ConversationBufferWindowMemory\n",
     "\n",
-    "memory = ConversationBufferMemory(return_messages=True)\n",
-    "memory.save_context({\"input\":\"Kimchi\"}, {\"output\": \"FA\"})\n",
+    "memory = ConversationBufferWindowMemory(return_messages=True, k=4)\n",
+    "def add_message(input, output):\n",
+    "    memory.save_context({\"input\":input}, {\"output\": output})\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    add_message(i, i)\n",
+    "\n",
     "memory.load_memory_variables({})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='Kimchi'),\n",
-       "  AIMessage(content='FA'),\n",
-       "  HumanMessage(content='Kimchi'),\n",
-       "  AIMessage(content='FA')]}"
+       "{'history': [HumanMessage(content='2'),\n",
+       "  AIMessage(content='2'),\n",
+       "  HumanMessage(content='3'),\n",
+       "  AIMessage(content='3'),\n",
+       "  HumanMessage(content='4'),\n",
+       "  AIMessage(content='4'),\n",
+       "  HumanMessage(content='5'),\n",
+       "  AIMessage(content='5')]}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.save_context({\"input\":\"Kimchi\"}, {\"output\": \"FA\"})\n",
-    "memory.load_memory_variables({})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [HumanMessage(content='Kimchi'),\n",
-       "  AIMessage(content='FA'),\n",
-       "  HumanMessage(content='Kimchi'),\n",
-       "  AIMessage(content='FA'),\n",
-       "  HumanMessage(content='Kimchi'),\n",
-       "  AIMessage(content='FA')]}"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "memory.save_context({\"input\":\"Kimchi\"}, {\"output\": \"FA\"})\n",
+    "for i in range(1, 6):\n",
+    "    add_message(i, i)\n",
+    "\n",
     "memory.load_memory_variables({})"
    ]
   }
