--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,50 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.memory import ConversationBufferWindowMemory\n",
-    "\n",
-    "memory = ConversationBufferWindowMemory(return_messages=True, k=4)\n",
-    "def add_message(input, output):\n",
-    "    memory.save_context({\"input\":input}, {\"output\": output})\n",
-    "\n",
-    "for i in range(1, 6):\n",
-    "    add_message(i, i)\n",
-    "\n",
-    "memory.load_memory_variables({})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='2'),\n",
-       "  AIMessage(content='2'),\n",
-       "  HumanMessage(content='3'),\n",
-       "  AIMessage(content='3'),\n",
-       "  HumanMessage(content='4'),\n",
-       "  AIMessage(content='4'),\n",
-       "  HumanMessage(content='5'),\n",
-       "  AIMessage(content='5')]}"
+       "{'history': \"The human, named Lee, introduces himself and shares his love for running. The AI responds positively, expressing pleasure in hearing about Lee's interest in running. Lee also mentions that his grandpa is an awesome human being, to which the AI acknowledges and agrees that Lee's grandpa is a great person.\"}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(1, 6):\n",
-    "    add_message(i, i)\n",
+    "from langchain.memory import ConversationSummaryMemory\n",
+    "from langchain.chat_models import ChatOpenAI\n",
     "\n",
-    "memory.load_memory_variables({})"
+    "chat = ChatOpenAI(temperature=0.1, model=\"gpt-4o-mini\")\n",
+    "\n",
+    "memory = ConversationSummaryMemory(llm=chat)\n",
+    "\n",
+    "def add_message(input, output):\n",
+    "    memory.save_context({\"input\":input}, {\"output\":output})\n",
+    "\n",
+    "def get_history():\n",
+    "    return memory.load_memory_variables({})\n",
+    "\n",
+    "add_message(\"Hi my name is Lee and I love to run.\", \"Nice to meet you Mr. Lee. It's great to hear you like running!\")\n",
+    "add_message(\"And My grandpa is awesome human being.\", \"Oh! I see. Your grandpa is great person.\")\n",
+    "\n",
+    "get_history()"
    ]
   }
  ],
