--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,91 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    \n",
+      "    Human:My name is Nico\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    Human: My name is Nico\n",
+      "AI: Hello, Nico! It's nice to meet you. How can I assist you today?\n",
+      "    Human:I live in Seoul\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    Human: My name is Nico\n",
+      "AI: Hello, Nico! It's nice to meet you. How can I assist you today?\n",
+      "Human: I live in Seoul\n",
+      "AI: That's great, Nico! Seoul is a vibrant city with a rich culture and history. What do you enjoy most about living there?\n",
+      "    Human:What is my name?\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Your name is Nico!'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from langchain.memory import ConversationKGMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
     "\n",
-    "chat = ChatOpenAI(temperature=0.1, model=\"gpt-4o-mini\")\n",
+    "llm = ChatOpenAI(temperature=0.1, model=\"gpt-4o-mini\")\n",
     "\n",
-    "memory = ConversationKGMemory(llm=chat, return_messages=True)\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "    llm=llm,\n",
+    "    max_token_limit=120,\n",
+    "    memory_key=\"chat_history\",\n",
+    ")\n",
     "\n",
-    "def add_message(input, output):\n",
-    "    memory.save_context({\"input\": input}, {\"output\": output})\n",
+    "template = \"\"\"\n",
+    "    You are a helpful AI talking to a human.\n",
     "\n",
+    "    {chat_history}\n",
+    "    Human:{question}\n",
+    "    You:\n",
+    "\"\"\"\n",
     "\n",
-    "add_message(\"Hi I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea.')]}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "memory.load_memory_variables({\"input\": \"who is Nicolas\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"Nicolas likes kimchi\", \"Wow that is so cool!\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea. Nicolas likes kimchi.')]}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "memory.load_memory_variables({\"inputs\": \"what does nicolas like\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea. Nicolas likes kimchi.')]}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "memory.load_memory_variables({\"inputs\": \"what is job of Nicolas\"})\n"
+    "chain = LLMChain(\n",
+    "    llm=llm,\n",
+    "    memory=memory,\n",
+    "    prompt=PromptTemplate.from_template(template),\n",
+    "    verbose=True,\n",
+    ")\n",
+    "\n",
+    "chain.predict(question=\"My name is Nico\")\n",
+    "chain.predict(question=\"I live in Seoul\")\n",
+    "chain.predict(question=\"What is my name?\")\n",
+    " "
    ]
   }
  ],
