--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "'Your name is Nico!'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,28 +69,27 @@
     "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.chains import LLMChain\n",
-    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1, model=\"gpt-4o-mini\")\n",
     "\n",
     "memory = ConversationSummaryBufferMemory(\n",
     "    llm=llm,\n",
-    "    max_token_limit=120,\n",
+    "    max_token_limit=80,\n",
     "    memory_key=\"chat_history\",\n",
+    "    return_messages=True,\n",
     ")\n",
     "\n",
-    "template = \"\"\"\n",
-    "    You are a helpful AI talking to a human.\n",
-    "\n",
-    "    {chat_history}\n",
-    "    Human:{question}\n",
-    "    You:\n",
-    "\"\"\"\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a helpful AI taking to a human.\"),\n",
+    "    MessagesPlaceholder(variable_name=\"chat_history\"),\n",
+    "    (\"human\", \"{question}\"),\n",
+    "])\n",
     "\n",
     "chain = LLMChain(\n",
     "    llm=llm,\n",
     "    memory=memory,\n",
-    "    prompt=PromptTemplate.from_template(template),\n",
+    "    prompt=prompt,\n",
     "    verbose=True,\n",
     ")\n",
     "\n",
