--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,101 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "    You are a helpful AI talking to a human.\n",
-      "\n",
-      "    \n",
-      "    Human:My name is Nico\n",
-      "    You:\n",
-      "\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "    You are a helpful AI talking to a human.\n",
-      "\n",
-      "    Human: My name is Nico\n",
-      "AI: Hello, Nico! It's nice to meet you. How can I assist you today?\n",
-      "    Human:I live in Seoul\n",
-      "    You:\n",
-      "\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "    You are a helpful AI talking to a human.\n",
-      "\n",
-      "    Human: My name is Nico\n",
-      "AI: Hello, Nico! It's nice to meet you. How can I assist you today?\n",
-      "Human: I live in Seoul\n",
-      "AI: That's great, Nico! Seoul is a vibrant city with a rich culture and history. What do you enjoy most about living there?\n",
-      "    Human:What is my name?\n",
-      "    You:\n",
-      "\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "content='Nice to meet you, Nico! How can I assist you today?'\n",
+      "content='Your name is Nico!'\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Your name is Nico!'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.chains import LLMChain\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
     "from langchain.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1, model=\"gpt-4o-mini\")\n",
     "\n",
     "memory = ConversationSummaryBufferMemory(\n",
     "    llm=llm,\n",
-    "    max_token_limit=80,\n",
-    "    memory_key=\"chat_history\",\n",
+    "    max_token_limit=120,\n",
     "    return_messages=True,\n",
     ")\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a helpful AI taking to a human.\"),\n",
-    "    MessagesPlaceholder(variable_name=\"chat_history\"),\n",
-    "    (\"human\", \"{question}\"),\n",
-    "])\n",
-    "\n",
-    "chain = LLMChain(\n",
-    "    llm=llm,\n",
-    "    memory=memory,\n",
-    "    prompt=prompt,\n",
-    "    verbose=True,\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a helpful AI talking to a human\"),\n",
+    "        MessagesPlaceholder(variable_name=\"history\"),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
     ")\n",
     "\n",
-    "chain.predict(question=\"My name is Nico\")\n",
-    "chain.predict(question=\"I live in Seoul\")\n",
-    "chain.predict(question=\"What is my name?\")\n",
-    " "
+    "\n",
+    "def load_memory(_):\n",
+    "    return memory.load_memory_variables({})[\"history\"]\n",
+    "\n",
+    "\n",
+    "chain = RunnablePassthrough.assign(history=load_memory) | prompt | llm\n",
+    "\n",
+    "\n",
+    "def invoke_chain(question):\n",
+    "    result = chain.invoke({\"question\": question})\n",
+    "    memory.save_context(\n",
+    "        {\"input\": question},\n",
+    "        {\"output\": result.content},\n",
+    "    )\n",
+    "    print(result)\n",
+    "\n",
+    "invoke_chain(\"My name is nico\")\n",
+    "invoke_chain(\"What is my name?\")"
    ]
   }
  ],
